@@ -1,3 +1,6 @@
+Plus1 WapStart Android SDK 2.2.1, 2013-05-30
+- Fixed onPause NPE crash when using disableAutoDetectLocation() method
+
 Plus1 WapStart Android SDK 2.2.0, 2013-05-23
 ----------------------
 - New banner shield in WebView layout
